[package]
name = "single_login"
version = "0.1.0"
authors = ["mapkkkk <epyc7742@126.com>"]
edition = "2021"

[dependencies]
minreq = {version = "2.6", features = [], default-features = false}
urlencoding = "2.1"
num-bigint = "0.4.5"
chrono = "0.4"

[profile.release]
lto = "fat"
opt-level = 'z'
panic = 'abort'
strip = true

[package.metadata.deb]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ['target/release/single_login', 'usr/bin/single_login', '755'],
  ['account.conf', 'etc/account.conf', '644'],
]
conf-files = [
  '/etc/account.conf',
]
maintainer-scripts = 'debian/'
systemd-units = { enable = true }