[package]
name = "single_login"
version = "0.1.1"
authors = ["mapkkkk <epyc7742@126.com>"]
edition = "2021"

[dependencies]
minreq = {version = "2.6", features = [], default-features = false}
urlencoding = "2.1"
num-bigint = "0.4.5"
chrono = "0.4"

[profile.release]
lto = "fat"
opt-level = 'z'
panic = 'abort'
strip = true
